
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint64_t ;
typedef int uint32_t ;
typedef int task_t ;


 int TASK_POLICY_RESOURCE_ATTRIBUTE_NONE ;
 int TASK_POLICY_RESOURCE_ATTRIBUTE_NOTIFY_EXC ;
 int TASK_POLICY_RESOURCE_ATTRIBUTE_THROTTLE ;
 int TASK_RUSECPU_FLAGS_DEADLINE ;
 int TASK_RUSECPU_FLAGS_PERTHR_LIMIT ;
 int TASK_RUSECPU_FLAGS_PROC_LIMIT ;
 int task_get_cpuusage (int ,int *,int *,int *,int*) ;
 int task_lock (int ) ;
 int task_unlock (int ) ;

int
proc_get_task_ruse_cpu(task_t task, uint32_t *policyp, uint8_t *percentagep, uint64_t *intervalp, uint64_t *deadlinep)
{

 int error = 0;
 int scope;

 task_lock(task);


 error = task_get_cpuusage(task, percentagep, intervalp, deadlinep, &scope);
 task_unlock(task);




 if (scope == TASK_RUSECPU_FLAGS_PERTHR_LIMIT) {
  *policyp = TASK_POLICY_RESOURCE_ATTRIBUTE_NOTIFY_EXC;
 } else if (scope == TASK_RUSECPU_FLAGS_PROC_LIMIT) {
  *policyp = TASK_POLICY_RESOURCE_ATTRIBUTE_THROTTLE;
 } else if (scope == TASK_RUSECPU_FLAGS_DEADLINE) {
  *policyp = TASK_POLICY_RESOURCE_ATTRIBUTE_NONE;
 }

 return(error);
}
