; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_proc_get_task_ruse_cpu.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_proc_get_task_ruse_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_RUSECPU_FLAGS_PERTHR_LIMIT = common dso_local global i32 0, align 4
@TASK_POLICY_RESOURCE_ATTRIBUTE_NOTIFY_EXC = common dso_local global i32 0, align 4
@TASK_RUSECPU_FLAGS_PROC_LIMIT = common dso_local global i32 0, align 4
@TASK_POLICY_RESOURCE_ATTRIBUTE_THROTTLE = common dso_local global i32 0, align 4
@TASK_RUSECPU_FLAGS_DEADLINE = common dso_local global i32 0, align 4
@TASK_POLICY_RESOURCE_ATTRIBUTE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_get_task_ruse_cpu(i32 %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  store i32 0, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @task_lock(i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @task_get_cpuusage(i32 %15, i32* %16, i32* %17, i32* %18, i32* %12)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @task_unlock(i32 %20)
  %22 = load i32, i32* %12, align 4
  %23 = load i32, i32* @TASK_RUSECPU_FLAGS_PERTHR_LIMIT, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %5
  %26 = load i32, i32* @TASK_POLICY_RESOURCE_ATTRIBUTE_NOTIFY_EXC, align 4
  %27 = load i32*, i32** %7, align 8
  store i32 %26, i32* %27, align 4
  br label %44

28:                                               ; preds = %5
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* @TASK_RUSECPU_FLAGS_PROC_LIMIT, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %28
  %33 = load i32, i32* @TASK_POLICY_RESOURCE_ATTRIBUTE_THROTTLE, align 4
  %34 = load i32*, i32** %7, align 8
  store i32 %33, i32* %34, align 4
  br label %43

35:                                               ; preds = %28
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* @TASK_RUSECPU_FLAGS_DEADLINE, align 4
  %38 = icmp eq i32 %36, %37
  br i1 %38, label %39, label %42

39:                                               ; preds = %35
  %40 = load i32, i32* @TASK_POLICY_RESOURCE_ATTRIBUTE_NONE, align 4
  %41 = load i32*, i32** %7, align 8
  store i32 %40, i32* %41, align 4
  br label %42

42:                                               ; preds = %39, %35
  br label %43

43:                                               ; preds = %42, %32
  br label %44

44:                                               ; preds = %43, %25
  %45 = load i32, i32* %11, align 4
  ret i32 %45
}

declare dso_local i32 @task_lock(i32) #1

declare dso_local i32 @task_get_cpuusage(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @task_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
